# ni845x_i2c_test

./: CMakeLists.txt  README.md
lib/: ni845x.lib
src/: ni845x_demo.c
